fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ body {
   font-size: 16px;
   margin-right: 50px;
   color: inherit;
+  display: flex;
+  gap: 50px;
 }
 
 .header-phone {
@@ -120,11 +122,14 @@ body {
 }
 .header-features {
   display: flex;
-  min-height: 168px;
+  max-height: 168px;
   padding: 0;
   margin-top: 100px;
+  align-items: flex-start;
   list-style: none;
   color: #ffffff;
+  flex-direction: row;
+  align-items: flex-start;
   position: relative;
 }
 .header-features-item {
